# prism-analyst

./: .gitignore  AGENT_MODE.md  MVP_PLAN.md  README.md  pyproject.toml
examples/: accounts.csv
prism_analyst/: __init__.py  cli.py  config.py  models.py  workspace.py
prism_analyst/collect/: __init__.py  github.py  jobs.py  manual.py  news.py  website.py
prism_analyst/llm/: __init__.py  backend.py  evidence_pack.py
prism_analyst/llm/prompts/: full_dossier.md  gift_doc.md  person_messaging.md  quick_brief.md
prism_analyst/render/: __init__.py  csv.py  digest.py  dossier.py  gift.py  snapshot.py
prism_analyst/signals/: __init__.py  confidence.py  decay.py  extract.py  score.py
prism_analyst/workflows/: __init__.py  analyze.py  batch.py  gift.py  monitor.py
tests/: test_models.py  test_renderers.py  test_signals.py  test_website.py  test_workspace.py
