[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-analyst"
version = "0.1.0"
description = "Lightweight account intelligence for AEs, founders, and GTM teams"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "tldextract>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
prism-analyst = "prism_analyst.cli:cli"

[tool.setuptools.packages.find]
include = ["prism_analyst*"]
